--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
+.idea/workspace.xml
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -35,3 +37,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+
+
