--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,13 @@ dependencies {
     //Querydsl
     implementation 'com.querydsl:querydsl-jpa'
 
+    //Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    // jwt 관련 의존성
+    compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+    runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+    runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 }
 
 test {
