--- a/build.gradle
+++ b/build.gradle
@@ -42,10 +42,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
     // jwt 관련 의존성
-    compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
-    runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
-    runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+//    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+    testImplementation 'org.springframework.security:spring-security-test'
+
+
 }
+
 
 test {
     useJUnitPlatform()
