--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     generate-ddl: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -24,3 +24,6 @@ spring:
       org.springframework.jdbc.core:
         JdbcTemplate: DEBUG
         StatementCreatorUtils: DEBUG
+
+  profiles:
+    include: oauth
