--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,7 @@ dependencies {
 
     // jwt 관련 의존성
 //    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
-    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
-    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     testImplementation 'org.springframework.security:spring-security-test'
 
 
