--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,16 @@
 server:
   port: 8080
 
+security:
+  enable:
+    csrf: true
+  basic:
+    enabled: false
+
+management:
+  security:
+    enabled: false
+
 
 spring:
   jpa:
