--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'javax.xml.bind:jaxb-api'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
