--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -3,16 +3,46 @@ spring:
     oauth2:
       client:
         registration:
+#          kakao:
+#            client-id: <your-id>
+#            client-secret: <your-secret>>
+#            redirect-uri: <your-url>/login/oauth2/code/kakao
+#            authorization-grant-type: authorization_code
+#            client-authentication-method: POST
+#            client-name: Kakao
+#            scope:
+#              - profile
+#              - account_email
           naver:
             client-id: l4Z5n7Dr8puo1xal22dq
             client-secret: fpoi6aZ8SO
-            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
+            redirect-uri:  http://localhost:8080/login/oauth2/code/naver
             authorization-grant-type: authorization_code
-            scope: name,email,profile_image
-            client-name: Naver
+            scope:
+              - name
+              - email
+#          google:
+#            client-id: <your-id>
+#            client-secret: <your-secret>
+#            scope:
+#              - profile
+#              - email
         provider:
+#          kakao:
+#            authorization-uri: https://kauth.kakao.com/oauth/authorize
+#            token-uri: https://kauth.kakao.com/oauth/token
+#            user-info-uri: https://kapi.kakao.com/v2/user/me
+#            user-name-attribute: id
           naver:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
+
+
+
+#  http://localhost:8080/oauth2/authorization/naver
+#  네이버 로그인 URL은 application-oauth.properties에 등록한 리다이렉트-uri 값에 맞춰 자동으로 등록된다.
+#  /oauth2/authorization까지는 고정. 마지막 Path만 소셜 로그인 필드를 사용
+
+# redirect URL: http://localhost:8080/login/oauth2/code/naver
