--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,15 +8,11 @@ spring:
     generate-ddl: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
 
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-<<<<<<< HEAD
     url: jdbc:mysql://localhost:3306/moom
-=======
-    url: jdbc:mysql://127.0.0.1:3306/virspit_auth?allowMultiQueries=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&characterSetResults=UTF-8&passwordCharacterEncoding=UTF-8
->>>>>>> 5db603e56c440bfb3595cec98e7e5cc908827160
     username: root
     password: password
 
